# DetectX

./: .gitignore  README.md  local.properties  settings.gradle
app/: .gitignore  CMakeLists.txt  build.gradle  detectx.jks
app/src/main/: AndroidManifest.xml
app/src/main/assets/models/NanodetPlus_m416_doorDet/: nanodet_door.param
app/src/main/assets/models/NanodetPlus_m416_leafDet/: nanodet_leaf.param
app/src/main/cpp/: CMakeLists.txt  native_lib.cpp
app/src/main/cpp/mobileSSD/: CMakeLists.txt  native_lib.cpp
app/src/main/cpp/nanodetPlus/: CMakeLists.txt  classNamesColors.h  nanodet.cpp  nanodet.h  nativeNanodet.cpp
app/src/main/cpp/nanodetPlusDoorDet/: CMakeLists.txt  classNamesColors.h  nanodet.cpp  nanodet.h  nativeNanodet.cpp
app/src/main/cpp/nanodetPlusLeafDet/: CMakeLists.txt  classNamesColors.h  nanodet.h  nativeNanodet.cpp
app/src/main/cpp/opencv/include/opencv2/: core.hpp  dnn.hpp  highgui.hpp  imgcodecs.hpp  imgproc.hpp  videoio.hpp
app/src/main/cpp/opencv/include/opencv2/core/: async.hpp  base.hpp  check.hpp  cvdef.h  cvstd.hpp  cvstd_wrapper.hpp  fast_math.hpp  mat.hpp  matx.hpp  optim.hpp  persistence.hpp  saturate.hpp  traits.hpp  types.hpp  utility.hpp  vsx_utils.hpp
app/src/main/cpp/opencv/include/opencv2/dnn/: dict.hpp  dnn.hpp  dnn.inl.hpp  layer.hpp
app/src/main/java/com/fatfish/chengjian/analyzer/: MobileSSDAnalyzer.java  NanodetPlusAnalyzer.java  NanodetPlusDoorAnalyzer.java  NanodetPlusLeafAnalyzer.java  TextAnalyzer.java  UpdateUICallback.java  UpdateUICallbackDoor.java
app/src/main/java/com/fatfish/chengjian/detectx/: App.java  LauncherActivity.java  MainActivity.java
app/src/main/java/com/fatfish/chengjian/utils/: BoxInfo.java  DoorDetectionLogInstance.java  GlobalConstants.java  JNIManager.java  LocalUtils.java  PreferenceCfgActivity.java
app/src/main/res/drawable/: round_rect.xml  settings_selector.xml
app/src/main/res/layout/: activity_launcher.xml  activity_main.xml  setting_layout.xml  toolbar.xml
app/src/main/res/values/: pref_values.xml  strings.xml  styles.xml
app/src/main/res/xml/: pref_settings_layout.xml
app/src/main/rs/: yuv420888.rs
gradle/wrapper/: gradle-wrapper.properties
